# interpreter

./: .gitignore  README.md  interpreter.sln
interpreter/: interpreter.vcxproj  interpreter.vcxproj.filters  test.basic
interpreter/src/: Core.h  Main.cpp
interpreter/src/Executor/: Executor.cpp  Executor.h
interpreter/src/Tokenize/: Tokenizer.cpp  Tokenizer.h
interpreter/src/Utils/: File.cpp  File.h
interpreter/tests/: CMakeLists.txt  ExecutorTest.cpp  TokenizerTest.cpp
